--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -49,8 +49,8 @@
   &__content {
     position: relative;
     z-index: 4;
-    height: calc(100vh - 20px);
-    // height: 80vh;
+    // height: calc(100vh - 20px);
+    height: 100vh;
     padding-bottom: 30px;
     overflow-x: hidden;
     overflow-y: auto;
