--- a/src/styles/pages/services.scss
+++ b/src/styles/pages/services.scss
@@ -282,8 +282,19 @@
         background: #1F3C53;
         width: 100%;
         height: 101px;
+        padding: 13px 10px;
         margin-bottom: 0.5rem;
+        textarea.form-control{
+            padding: 0px;
+        }
+        textarea{
+            resize: none;
+        }
+        .form-group textarea::-webkit-scrollbar{
+            background: transparent;
+        }
     }
+   
     .table{
         margin-bottom: 0.5rem !important;
         td{
@@ -317,12 +328,15 @@
         background: #1F3C53;
         margin-bottom: -6px !important;
     }
-    .pattern-img img{
+    .pattern-img {
+        margin-bottom: 54px;
+        img{
         // background: linear-gradient(-45deg, transparent 75%, #1f3c53 0) 0 8%, linear-gradient(45deg, transparent 75%, #1f3c53 0) 0 12%;
         // background-size: 20px;
         // padding: 10px;
         height: 20px;
         // width: 100%;
+        }
     }
 
 .TableMainList{
@@ -359,7 +373,7 @@
             background: none;
             border: #fff 1px solid;
             border-radius: 20px;
-            padding: 0px 8px;
+            padding: 0px 4px;
             font-weight: 500;
             cursor: pointer;
             .minus{
@@ -379,15 +393,6 @@
                 padding: 5px;
                 font-size: 13px;
                 font-family: 'Neo_Sans_Pro'
-                input{
-                    width: 10px;
-                    height: 15px;
-                    background: transparent;
-                    color: white;
-                    border: 0px;
-                    font-size: 13px;
-                    font-weight: bold;
-                }
             }
         }
     }
@@ -404,6 +409,16 @@
         width: 100%;
         margin-bottom: 1rem;
         height: 101px;
+        padding: 13px 10px;
+        .form-group textarea::-webkit-scrollbar{
+            background: transparent;
+        }
+        textarea{
+            resize: none;
+        }
+        textarea.form-control{
+            padding: 0px;
+        }
     }
     .table{
         margin-bottom: 0.5rem !important;
@@ -803,13 +818,13 @@
       }
 
     //Checkout table
-    .TableMainList{
-        .t-body td{
-            .qtybtn{
-                width: 30%;
-            }
-        }
-     }
+    // .TableMainList{
+    //     .t-body td{
+    //         .qtybtn{
+    //             width: 30%;
+    //         }
+    //     }
+    //  }
      .confirmBtn-div{
         width: 100%;
         flex-direction: row;
@@ -960,9 +975,21 @@
 .note-text-checkout{
     textarea::-webkit-input-placeholder
     {
-    color: #A2B0BA !important;
+        color: #A2B0BA !important;
     }
     textarea::placeholder{
-    color: #A2B0BA !important;
+        color: #A2B0BA !important;
     }
 }
+
+
+@media screen and (max-width:320px){
+    //Checkout table
+    .TableMainList{
+        .t-body td{
+            .qtybtn{
+                width: 75% !important;
+            }
+        }
+     }
+    }
