adjusted width of qtybtn

--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -171,14 +171,14 @@
     color: #fff;
     text-align: center;
     font-size: 15px;
-    font-family: Neo_Sans_Pro;
+    font-family: 'Neo_Sans';
     font-weight: 600;
   }
   .MuiListItemText-root{
     text-align: center;
   .MuiTypography-body1{
     font-size: 15px;
-    font-family: Neo_Sans_Pro;
+    font-family: 'Neo_Sans';
     font-weight: 600;
     color: #fff;
   }
