--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -184,12 +184,10 @@
   }
 }
 
-  .makeStyles-list-1 {
-    ul:hover{
+  .makeStyles-list-1 ul:hover{
       border: #107bd2 1px solid;
     }
-    width: 300px;
-  }
+ 
 }
 
 .MuiList-root {
