--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -47,12 +47,9 @@
 }
 
 .sidebar-footer{
-  position: absolute;
-  bottom: 0px;
-  margin: 0 auto;
-  left: 100px;
-  font-family: 'Neo_Sans_Pro';
-  font-size:11px;
+  position: fixed;
+  bottom: 0px; 
+  left: 100px; 
 }
 
 button:focus {
