added copy right in sidebar and landscape mode media qry

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -49,7 +49,15 @@
 .sidebar-footer{
   position: fixed;
   bottom: 0px; 
-  left: 100px; 
+  left: 76px; 
+  p{
+    color: #fff;
+    text-align: center;
+    padding: 12px;
+    font-family: 'Neo_Sans_Pro';
+    font-size:11px;
+    margin-bottom: 0px;
+  }
 }
 
 button:focus {
