--- a/src/styles/pages/services.scss
+++ b/src/styles/pages/services.scss
@@ -786,7 +786,7 @@
       }
 }
 
-@media screen and (max-width:768px){
+@media screen and (max-width:768px) and (orientation: portrait)  {
     .SubcategoryMain {
         .card{
             border: 0px !important;
