--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -19,7 +19,7 @@ footer{
   color: #fff;
   text-align: center;
   padding: 12px;
-  font-family: Neo Sans Pro,Regular;
+  font-family: 'Neo_Sans_Pro';
   font-size:11px;
   p{
     margin: 0;
