--- a/src/styles/demos/_demos.scss
+++ b/src/styles/demos/_demos.scss
@@ -91,7 +91,10 @@
     .confirmBtn{
         border-radius: 0 !important;
         bottom: 0;
-    }
-    
+    }  
   }
+  .wakeup-div .note-text {
+    margin-bottom: 4rem !important;
+  }
+
 }
